--- a/index.html
+++ b/index.html
@@ -128,11 +128,9 @@
 						<div class="col-sm-12">
 							<div class="single-about-us">
 								<div class="about-us-txt">
-									<h2>
-										F<span class="span-home-azul">&</span>G Hoteles
-										<br>
-										<span>Explora la belleza de Logroño</span>
-									</h2>
+									<h2>F<span>&</span>G Hoteles</h2><br>
+									<h1>Explora la belleza de Logroño</h1>
+									
 									<div class="about-btn">
 										<a href="#desc-tabs" class="smooth-scroll">
 										<button  class="about-view">
@@ -523,7 +521,7 @@
 											<img src="assets/images/gallary/habitacion2.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													Estándar Doble
+													Estándar
 												</a>
 												<p><span>Intimidad</span><span>Tranquilidad</span></p>
 											</div> <!-- /.item-title-->
@@ -532,36 +530,36 @@
 
 						  			<div class="col-md-4">
 						  				<div class="filtr-item">
-											<img src="assets/images/gallary/prueba.jpg" alt="portfolio image"/>
+											<img id="fotoLarga" src="assets/images/gallary/prueba.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													Doble Individual
+													Individual 2
 												</a>
-												<p><span>25 tours</span><span>10 places</span></p>
+												<p><span>Tamaño</span><span>Pareja</span></p>
 											</div><!-- /.item-title -->
 										</div><!-- /.filtr-item -->
 						  			</div><!-- /.col -->
 
 						  			<div class="col-md-4">
 						  				<div class="filtr-item">
-											<img src="assets/images/gallary/individual.jpg" alt="portfolio image"/>
+											<img id="fotoCuadrado" src="assets/images/gallary/individual.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
 													Individual 
 												</a>
-												<p><span>18 tours</span><span>9 places</span></p>
+												<p><span>Calma</span><span>Intimidad</span></p>
 											</div> <!-- /.item-title-->
 										</div><!-- /.filtr-item -->
 						  			</div><!-- /.col -->
 
 						  			<div class="col-md-4">
 						  				<div class="filtr-item">
-											<img src="assets/images/gallary/triple.jpg" alt="portfolio image"/>
+											<img id="fotoCuadrado" src="assets/images/gallary/triple.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
 													Triple
 												</a>
-												<p><span>14 tours</span><span>12 places</span></p>
+												<p><span>Familia</span><span>Segura</span></p>
 											</div> <!-- /.item-title-->
 										</div><!-- /.filtr-item -->
 						  			</div><!-- /.col -->
@@ -573,7 +571,7 @@
 												<a href="#">
 													Suite Principal
 												</a>
-												<p><span>14 tours</span><span>6 places</span></p>
+												<p><span>Lujo</span><span>Placer</span></p>
 											</div> <!-- /.item-title-->
 										</div><!-- /.filtr-item -->
 						  			</div><!-- /.col -->
