--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 										<li class="smooth-menu"><a href="#gallery">Habitaciones</a></li>
 										<li class="smooth-menu"><a href="#pack">Paquetes </a></li>
 										<li class="smooth-menu"><a href="#spo">Ofertas</a></li>
-										<li class="smooth-menu"><a href="#blog">Eventos</a></li>
+										<li class="smooth-menu"><a href="#blog">Blog</a></li>
 										<li class="smooth-menu"><a href="#subs">Contacto</a></li>
 										<li>
 											<button class="book-btn">Reserva
@@ -1124,10 +1124,10 @@
 				<div class="blog-details">
 						<div class="gallary-header text-center">
 							<h2>
-								Próximos Eventos
+								Noticias del Blog
 							</h2>
 							<p>
-								Estos son los próximos eventos del hotel y Logroño
+								Estos son las últimas publicaciones de nuestro blog
 							</p>
 						</div><!--/.gallery-header-->
 						<div class="blog-content">
@@ -1270,7 +1270,7 @@
 									<p><a href="#">Habitaciones</a></p>
 									<p><a href="#">Paquetes</a></p>
 									<p><a href="#">Ofertas</a></p>
-									<p><a href="#">Eventos</a></p>
+									<p><a href="#">Blog</a></p>
 									<p><a href="#">Contacto</a></p>
 								</div><!--/.single-footer-txt-->
 							</div><!--/.single-footer-item-->
