--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
 											<img src="assets/images/gallary/suiteSpa.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													Suite Principal
+													Suite
 												</a>
 												<p><span>Lujo</span><span>Placer</span></p>
 											</div> <!-- /.item-title-->
