--- a/index.html
+++ b/index.html
@@ -1394,7 +1394,7 @@
 					<div class="col-sm-4">
 						<div class="single-special-offer">
 							<div class="single-special-offer-bg">
-								<img src="assets/images/offer/offer-shape.png" alt="offer-shape">
+								<img src="assets/images/offer/offer-shape.png" style="opacity: 0;" alt="offer-shape">
 							</div>
 							<!--/.single-special-offer-bg-->
 							<div class="single-special-shape-txt">
